# CyPromoManage

./: CMakeLists.txt  Makefile  README.md
include/: api_crypt.h  api_student.h  class.h  course.h  csv_parser.h  data_saver.h  list.h  memory_utils.h  student.h
src/: api_crypt.c  api_student.c  class.c  course.c  csv_parser.c  data_saver.c  list.c  main.c  memory_utils.c  student.c
